--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,7 @@
 
     <title>my house appliance project</title>
      <link rel="stylesheet" href="css/bootstrap.css">
-        <script src="/js/bootstrap.js"></script>
+        <script src="js/bootstrap.js"></script>
 
 </head>
 <body class="container-fluid">
@@ -28,7 +28,6 @@
                 <div class="navbar-nav">
                     <a href="index.html" class="nav-link">Home</a>
                     <a href="about us.html"class="nav-link">about us</a>                
-                 
                     <a href="help.html" class="nav-link">help</a>
                     <a href="offers.html" class="nav-link">offers</a>
             </div>
