--- a/help.html
+++ b/help.html
@@ -4,7 +4,7 @@
 
     <title>my house appliance project</title>
      <link rel="stylesheet" href="css/bootstrap.css">
-        <script src="/js/bootstrap.js"></script>
+        <script src="js/bootstrap.js"></script>
 
 </head>
 <body class="container-fluid">
@@ -61,13 +61,13 @@
         <div class="col-md-4">
                         <h4> stay online to see our goods in our platforms</h4>
             <a href="https://www.facebook.com">
-            <img src="/images/fb.png">
+            <img src="images/fb.png">
             </a>
             <a href="https://www.inatagram.com">
-            <img src="/images/in.png">
+            <img src="images/in.png">
             </a>
             <a href="https://www.x.com">
-            <img src="/images/x.png">
+            <img src="images/x.png">
             </a>
 </div>
             <marquee behavior="" direction=""><b class="text-danger">for enquiry call:0736456600</b></marquee>
