--- a/index.html
+++ b/index.html
@@ -155,10 +155,11 @@
                  <hr>
                  <br>
                 <!-- section 5 starts here -->
-                 <div class="col-md-4">
-                            <h1 class="bg-primary text-danger">My home gadgets</h1>
+                 <div>
+                            <h1 class="bg-primary text-danger text-center">My home gadgets</h1>
                             </div>
                  <section class="row text-center">
+                     <div class="col-md-4">
                         <img src="images/fridge-7074774_1920.png" alt="" weight="250px" height="250px"><br>
                             <p>A fridge works by using a cooling system that removes heat from inside the appliance. This system includes a compressor, condenser coils, evaporator coils, and a refrigerant fluid. The refrigerant circulates through the system, absorbing heat from the inside and releasing it outside the fridge.</p>
                             <b class="text-primary">ksh48000</b><br>
